# PharmaControl

./: .gitignore  CLAUDE.md  LICENSE  Plant_Simulator.md  README.md  TODO.md  V1-summary.md  V2-summary.md  bias_modeling_paradigms.md  final_intercept_verification.py  pyproject.toml  test_bias_correction.py  test_enhanced_notebook.py
V1/: OPTIMIZATION_SUMMARY.md  README.md  pyproject.toml
V1/data/: best_predictor_model.pth  granulation_data.csv  granulation_data_raw.csv  model_scalers.joblib  mpc_decisions_step_100.csv  mpc_decisions_step_200.csv  mpc_decisions_step_300.csv  mpc_decisions_step_400.csv  mpc_decisions_step_499.csv  optuna_study.pkl  probabilistic_model.pth  scalers.joblib  simulation_config_step_100.json  simulation_config_step_200.json  simulation_config_step_300.json  simulation_config_step_400.json  simulation_config_step_499.json  simulation_progress_step_100.csv  simulation_progress_step_200.csv  simulation_progress_step_300.csv  simulation_progress_step_400.csv  simulation_progress_step_499.csv  test_data.csv  test_data_raw.csv  test_predictions.npz  train_data.csv  train_data_raw.csv  training_log.csv  validation_data.csv  validation_data_raw.csv
V1/docs/: .gitignore  Makefile  conf.py  index.rst  requirements.txt
V1/docs/_static/: custom.css
V1/docs/api/: index.rst
V1/docs/modules/: dataset.rst  model_architecture.rst  mpc_controller.rst  plant_simulator.rst
V1/notebooks/: 01_Advanced_Process_Simulation_and_Theory.ipynb  02_Data_Wrangling_and_Hybrid_Preprocessing.ipynb  03_Predictive_Model_Training_and_Validation.ipynb  03_Predictive_Model_Training_and_Validation_optimized.ipynb  04_Robust_Model_Predictive_Control_System.ipynb  05_Closed_Loop_Simulation_and_Performance_Analysis.ipynb
V1/src/: __init__.py  dataset.py  model_architecture.py  mpc_controller.py  plant_simulator.py
V2/: DESIGN_DOCUMENT.md  Dockerfile  README.md  REAL_HISTORY_TRACKING.md  SAFE_FALLBACK_FIX_REPORT.md  SOFT_SENSOR_FIX_REPORT.md  config.yaml  pyproject.toml  requirements.txt  run_controller.py  test_safe_fallback_demo.py  test_v2_3_completion.py  test_v2_4_completion.py
V2/Bugs_open/: COLUMN_ORDER_BUG_FIX_PLAN.md  GA_PARAMETER_SCALING_PLAN.md  RootCauseV1_BUG.md  SAMPLE_COUNT_LOGIC_BUG.md  V2-6_INTERFACE_FIX_PLAN.md
V2/Bugs_solved/: test_optimizer_performance_benchmark.py  test_real_vs_mock_history_demo.py  test_safe_fallback_demo.py  test_scaling_fix_performance.py  test_soft_sensor_fix_demo.py
V2/docs/: Debug_Notebook_Methodology_Report.md  build_docs.sh  conf.py  index.rst  modules.rst  robust_mpc.rst
V2/notebooks/: V2-10_Comprehensive_V1_V2_Comparison.ipynb  V2-1_State_Estimation_for_Stable_Control.ipynb  V2-1_State_Estimation_for_Stable_Control_Enhanced.ipynb  V2-1_State_Estimation_for_Stable_Control_Enhanced_complete.ipynb  V2-2_Probabilistic_Modeling_for_Uncertainty_Awareness.ipynb  V2-3_Advanced_Optimization_with_Genetic_Algorithms.ipynb  V2-4_The_Robust_MPC_Core_Integrating_Intelligence.ipynb  V2-4_The_Robust_MPC_Core_Integrating_Intelligence_Enhanced.ipynb  V2-4_The_Robust_MPC_Core_Integrating_Intelligence_Professional.ipynb  V2-5_V2_vs_V1_Showdown_Stress_Test_Comparison.ipynb  V2-6_FIXED.ipynb  V2-6_Real_Implementation_Production_System.ipynb  V2-7_Complete_Analysis.ipynb  V2-8_V1_Controller_Debug.ipynb  V2-8_V1_Controller_Debug_Extended.ipynb  V2-9_V2_Controller_Debug.ipynb  V2-9_V2_Controller_Debug_final.ipynb  v1_controller_adapter.py
V2/robust_mpc/: __init__.py  bug1  core.py  data_buffer.py  estimators.py  models.py  optimizers.py  v1_adapter.py
V2/tests/: conftest.py  test_buffer_integrity_integration.py  test_data_buffer_race_conditions.py  test_error_handling.py  test_genetic_optimizer.py  test_genetic_optimizer_integration.py  test_genetic_optimizer_performance.py  test_genetic_optimizer_properties.py  test_history_buffer.py  test_library_structure.py  test_offset_free_performance.py  test_offset_scaling.py  test_optimizer_efficiency.py  test_optimizer_reset.py  test_parameter_bounds_scaling.py  test_safe_fallback_initialization.py  test_soft_sensor_robustness.py  test_v1_adapter_scaling.py
V2/tests/test_data/: __init__.py  benchmark_functions.py  pharmaceutical_scenarios.py
V3/: DESIGN_DOCUMENT.md  LICENSE  README.md  pyproject.toml
V3/data/: operational_history_v3.db
V3/docs/: autopharm_core.common.rst  autopharm_core.learning.rst  autopharm_core.rl.rst  autopharm_core.rst  autopharm_core.xai.rst  build_docs.sh  conf.py  index.rst  modules.rst  services.rst
V3/notebooks/: V3-1_Online_Learning_and_Adaptation.ipynb  V3-2_Explainable_AI_for_Trust.ipynb  V3-3_Advanced_Policy_Learning_with_RL.ipynb
V3/src/autopharm_core/: __init__.py
V3/src/autopharm_core/common/: __init__.py  types.py
V3/src/autopharm_core/learning/: __init__.py  data_handler.py  online_trainer.py
V3/src/autopharm_core/rl/: __init__.py  environment.py
V3/src/autopharm_core/xai/: __init__.py  explainer.py
