[project]
name = "pharmacontrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
    "sphinx-copybutton>=0.4.0",
    "sphinxcontrib-napoleon>=0.7",
    "myst-parser>=0.17.0",
    "sphinx-autobuild>=2021.3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
